<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModerateRisk">

    <Button
            android:text="@string/button_low_one"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button6" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="126dp"
    />
    <Button
            android:text="@string/button_low_two"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button7" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button6"/>
    <Button
            android:text="@string/button_low_three"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button8" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button7"/>
    <Button
            android:text="@string/button_low_four"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button9" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button8"/>
    <Button
            android:text="@string/button_low_five"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button10" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button9"/>
    <Button
            android:text="@string/button_low_six"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button11" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button10"/>

</android.support.constraint.ConstraintLayout>