<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="25dp">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:hint="@string/edit_messsage" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="212dp"/>
    <Button
            android:text="@string/button_send"
            android:layout_width="126dp"
            android:layout_height="0dp"
            android:id="@+id/button"
            android:onClick="sendMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="240dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toStartOf="@+id/button2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:hint="@string/edit_periodo"/>
    <Button
            android:layout_width="126dp"
            android:layout_height="0dp"
            android:id="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="240dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp" android:text="@string/button_sim"/>
</android.support.constraint.ConstraintLayout>