<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".low_portifolio_one">

    <TextView
            android:text="@string/name_low_port1_1"
            android:layout_width="209dp"
            android:layout_height="34dp"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="120dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/descript_low_port_1"
            android:layout_width="197dp"
            android:layout_height="34dp"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="61dp"
            android:id="@+id/textView5" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="36dp"
            android:textSize="36sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="142dp" android:layout_marginStart="142dp"
    />
    <TextView
            android:text="@string/name_low_port1_2"
            android:layout_width="209dp"
            android:layout_height="34dp"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/descript_low_port1_2"
            android:layout_width="197dp"
            android:layout_height="34dp"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/name_low_port1_2"
            android:layout_width="209dp"
            android:layout_height="34dp"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginTop="8dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/descript_low_port1_3"
            android:layout_width="197dp"
            android:layout_height="34dp"
            android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/name_low_port1_3"
            android:layout_width="209dp"
            android:layout_height="34dp"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="8dp"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/descript_low_port1_4"
            android:layout_width="197dp"
            android:layout_height="34dp"
            android:id="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <TextView
            android:layout_width="61dp"
            android:layout_height="32dp"
            android:id="@+id/textView12" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.92" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="160dp"/>
    <TextView
            android:layout_width="61dp"
            android:layout_height="32dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.92"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView12"/>
    <TextView
            android:layout_width="61dp"
            android:layout_height="32dp"
            android:id="@+id/textView14" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.92"/>
    <TextView
            android:layout_width="61dp"
            android:layout_height="32dp" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView15"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/textView11" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.92"/>
    <TextView
            android:layout_width="70dp"
            android:layout_height="40dp" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView16"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="90dp"
            app:layout_constraintStart_toEndOf="@+id/textView17" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.86" android:textSize="18sp"/>
    <TextView
            android:text="@string/show_total"
            android:layout_width="129dp"
            android:layout_height="42dp"
            android:id="@+id/textView17" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp" android:textSize="24sp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="90dp"/>
</android.support.constraint.ConstraintLayout>